force-app/main/default/objects/Accreditions_scoring_setting__mdt/Accreditions_scoring_setting__mdt.object-meta.xml
<CustomObject>
    <label>Accreditions scoring setting</label>
    <pluralLabel>Accreditions scoring setting</pluralLabel>
</CustomObject>