force-app/main/default/objects/Accreditions_scoring_setting__mdt/fields/Account_Rollup_field__c.field-meta.xml
<CustomField>
    <fullName>Account_Rollup_field__c</fullName>
    <description>Field specifying the API name of the rollup field on the account for the accreditation</description>
    <label>Account Rollup field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>