force-app/main/default/objects/Accreditions_scoring_setting__mdt/fields/Contact_Accreditation_Expiry_Field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Accreditation_Expiry_Field__c</fullName>
    <label>Contact Accreditation Expiry Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>