force-app/main/default/objects/Accreditions_scoring_setting__mdt/fields/Contact_Certification_Achieved_field__c.field-meta.xml
<CustomField>
    <fullName>Contact_Certification_Achieved_field__c</fullName>
    <label>Contact Certification Achieved field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>