force-app/main/default/objects/Accreditions_scoring_setting__mdt/fields/Test_Codes__c.field-meta.xml
<CustomField>
    <fullName>Test_Codes__c</fullName>
    <label>Test Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>