force-app/main/default/objects/Accreditions_scoring_setting__mdt/fields/Valid_for_in_days__c.field-meta.xml
<CustomField>
    <fullName>Valid_for_in_days__c</fullName>
    <label>Valid for (in days)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>